# pkg/models/forms/outputForms/authOutput.go
@@ -1,0 +1,10 @@
+package outputForms
+
+type AuthResponse struct {
+	Token        string `json:"token"`
+	RefreshToken string `json:"refresh_token"`
+}
+
+type RefreshTokenResponse struct {
+	Token string `json:"token"`
+}
